添加欢迎界面

--- a/res/layout/activity_advice.xml
+++ b/res/layout/activity_advice.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
+    android:layout_margin="7dp"
     android:orientation="vertical" >
 
     <EditText
         android:id="@+id/advice"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_userkown"
         android:hint="请填写您的意见或者建议"
