--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -9,14 +9,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="25sp"
+        android:layout_margin="25dp"
         android:src="@drawable/sict_logo" />
 
     <TextView
         android:id="@+id/tv_weather"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10sp"
+        android:layout_margin="10dp"
         android:gravity="right" />
 
     <EditText
@@ -46,6 +46,10 @@
             android:layout_weight="1"
             android:background="@drawable/shape_gray_button"
             android:text="注册" />
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="0dp" />
 
         <Button
             android:id="@+id/bt_login"
