--- a/res/layout/activity_zhuce.xml
+++ b/res/layout/activity_zhuce.xml
@@ -16,8 +16,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="3dp"
             android:text="用户须知" />
 
         <TextView
@@ -40,26 +40,32 @@
             android:text="3." />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/tel"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="手机号"
-        android:inputType="phone" />
+        android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/psw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="密码"
-        android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/tel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="手机号"
+            android:inputType="phone" />
 
-    <EditText
-        android:id="@+id/psw1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="确认密码"
-        android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/psw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="密码"
+            android:inputType="textPassword" />
+
+        <EditText
+            android:id="@+id/psw1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="确认密码"
+            android:inputType="textPassword" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,9 +86,6 @@
             android:entries="@array/route" />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="16dp" />
 
     <Button
         android:id="@+id/bt_logup"
