--- a/res/layout/activity_first.xml
+++ b/res/layout/activity_first.xml
@@ -1,11 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/first"
+    android:background="@drawable/im_first"
     android:orientation="vertical" >
-
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
@@ -13,4 +12,5 @@
         android:layout_height="match_parent" >
     </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+
+</FrameLayout>
