--- a/res/layout/first_chun.xml
+++ b/res/layout/first_chun.xml
@@ -2,7 +2,7 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/chun"
+    android:background="@drawable/im_chun"
      android:id="@+id/view_chun" >
     
 
