--- a/res/layout/first_xia.xml
+++ b/res/layout/first_xia.xml
@@ -2,7 +2,7 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/xia"
+    android:background="@drawable/im_xia"
      android:id="@+id/view_xia" >
     
 
