--- a/res/layout/fragment_book.xml
+++ b/res/layout/fragment_book.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     android:showDividers="middle" >
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal"
+        android:hint="车辆位置"
+        android:textSize="18sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,15 +25,16 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="路线："
-            android:textSize="20sp" />
+            android:text="路线:"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_route"
+        <Spinner
+            android:id="@+id/spinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:textSize="20sp" />
+            android:entries="@array/route" />
     </LinearLayout>
 
     <LinearLayout
@@ -70,27 +79,13 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:text="路线:"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:entries="@array/route" />
-    </LinearLayout>
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal"
+        android:hint="預定信息"
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -156,30 +151,12 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/dill"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/cancel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/shape_gray_button"
-            android:text="取消预订" />
-
-        <View
-            android:layout_width="3dp"
-            android:layout_height="0dp" />
-
-        <Button
-            android:id="@+id/dill"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:background="@drawable/shape_blue_button"
-            android:text="预订" />
-    </LinearLayout>
+        android:layout_gravity="right"
+        android:background="@drawable/shape_blue_button"
+        android:text="预订" />
 
 </LinearLayout>
