--- a/res/layout/fragment_location.xml
+++ b/res/layout/fragment_location.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:divider="@drawable/separator_vertical"
             android:orientation="vertical"
+            android:paddingLeft="3dp"
             android:paddingTop="20dp"
             android:showDividers="middle" >
 
@@ -25,7 +26,6 @@
                 android:id="@+id/bt_userloc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_gray_button"
                 android:text="我的位置" />
 
             <Button
@@ -33,14 +33,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/bt_userloc"
-                android:background="@drawable/shape_gray_button"
                 android:text="班车位置" />
 
             <Button
                 android:id="@+id/bt_traffic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_gray_button"
                 android:text="显示路况" />
         </LinearLayout>
     </FrameLayout>
