--- a/res/menu/advice.xml
+++ b/res/menu/advice.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/commit"
-        android:showAsAction="always|withText"
-        android:title="提交"/>
+        android:icon="@drawable/ic_save"
+        android:showAsAction="always"/>
 
 </menu>
