--- a/res/menu/remind.xml
+++ b/res/menu/remind.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menu_save_remind"
-        android:showAsAction="always|withText"
-        android:title="确定"/>
+        android:icon="@drawable/ic_save"
+        android:showAsAction="always"/>
 
 </menu>
