--- a/res/layout/first_welcome3.xml
+++ b/res/layout/first_welcome3.xml
@@ -2,8 +2,8 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/im_xia"
-     android:id="@+id/view_xia" >
+    android:background="@drawable/welcome3" 
+    android:id="@+id/view_qiu">
     
 
 </View>
